Add previous, next, stop and manual search

--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -34,13 +34,20 @@
               border: 4px solid white;
             }
 
-            .icon-button:focus {
-              outline: 0;
+            .icon-button {
+              background: white;
+              border: 4px solid black;
+              border-radius: 10px;
+            }
+
+            .icon-button:hover {
+              box-shadow: 5px 10px;
             }
 
             .icon-image {
-              width: 50px;
-              height: 50px;
+              width: 40px;
+              height: 40px;
+              padding: 10px;
             }
 
             .box {
@@ -116,19 +123,6 @@
         <div class="after-content" id="container">
           <img src="{{img}}" id="img" style="width: 60%; height; 100%; float: left;">
           <form method="post" style="float: left; margin-left: 10%;">
-            <!-- <p><button id="rgbtohsi" type="button">RGB to HSI</button></p> -->
-            <!-- <p><button>Overlapping</button></p> -->
-            <!-- <p><button id="contrast" type="button">Constrast stretching</button></p>
-            <p><button id="gamma" type="button">Gamma correction</button></p>
-            <p id="gamma-p" style="display: none;">
-              <input id="gamma-value" type="text" placeholder="Enter gamma value">
-              <input id="gamma-correct" type="button" value="Gamma Correct">
-            </p>
-            <p><button id="zeff" type="button">Zeff</button>&nbsp;(Click to activate/deactivate)</p>
-            <p><button type="button" id="zoomin">Zoom in</button></p>
-            <p><button type="button" id="zoomout">Zoom out</button></p>
-            <p><button type="button" id="rgb">RGB</button></p>
-            <p><button type="button" id="gray">Grayscale</button></p> -->
             <div>
               <p>
                 <button type="button" id="pseudo-mode" class='mode-button'>Pseudo colored</button>
@@ -191,11 +185,10 @@
                 </div>
               </div>
 
-              <p>
-                <button type="button" id="manual-search">Manual Search</button>
-                <button type="button" id="grayscale-mode" class='#'><img class='icon-image' src="static/ecil_icons/previous.png"></button>
-                <button type="button" id="pseudo-mode" class='#'><img class='icon-image' src="static/ecil_icons/stop.png"></button>
-                <button type="button" id="grayscale-mode" class='#'><img class='icon-image' src="static/ecil_icons/next.png"></button>
+              <p style="text-align: center;">
+                <button type="button" id="grayscale-mode" class='icon-button'><img class='icon-image' src="static/ecil_icons/previous.png"></button>
+                <button type="button" id="pseudo-mode" class='icon-button'><img class='icon-image' src="static/ecil_icons/stop.png"></button>
+                <button type="button" id="grayscale-mode" class='icon-button'><img class='icon-image' src="static/ecil_icons/next.png"></button>
               </p>
             </div>
           </form>
