--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -110,7 +110,134 @@
               font-size: 100%;
             }
 
+            .bottom-button {
+              width: 100px;
+              height: 50px;
+              word-wrap: break-word;
+              border: 4px solid black;
+              border-radius: 10px;
+              background: none;
+              font-weight: bold;
+              font-size: 100%;
+              float: left;
+              margin-right: 5px;
+            }
+
+            .bottom-button:hover {
+              background: black;
+              color: white;
+            }
+
+            .toggle-button {
+              background: none;
+              font-weight: bold;
+              border: none;
+              width: 100px;
+              height: 42px;
+              font-size: 100%;
+              border-right: 2px solid black;
+              border-left: 2px solid black;
+              float: left;
+              border-collapse: collapse;
+            }
+
+            .selected-toggle {
+              background: black;
+              color: white;
+              font-weight: bold;
+              border: none;
+              width: 100px;
+              height: 42px;
+              font-size: 100%;
+              border-right: 2px solid black;
+              border-left: 2px solid black;
+              float: left;
+              border-collapse: collapse;
+            }
+
+            #toggle {
+              border: 4px solid black;
+              border-radius: 10px;
+              margin-right: 5px;
+              display: inline-block;
+            }
+
+            * {box-sizing: border-box;}
+
+            .img-magnifier-container {
+              position:relative;
+            }
+
+            .img-magnifier-glass {
+              position: absolute;
+              border: 3px solid #000;
+              border-radius: 50%;
+              cursor: none;
+              /*Set the size of the magnifier glass:*/
+              width: 100px;
+              height: 100px;
+            }
+
         </style>
+
+        <script>
+        function magnify(imgID, zoom) {
+          var img, glass, w, h, bw;
+          img = document.getElementById(imgID);
+          /*create magnifier glass:*/
+          glass = document.createElement("DIV");
+          glass.setAttribute("class", "img-magnifier-glass");
+          /*insert magnifier glass:*/
+          img.parentElement.insertBefore(glass, img);
+          /*set background properties for the magnifier glass:*/
+          glass.style.backgroundImage = "url('" + img.src + "')";
+          glass.style.backgroundRepeat = "no-repeat";
+          glass.style.backgroundSize = (img.width * zoom) + "px " + (img.height * zoom) + "px";
+          bw = 3;
+          w = glass.offsetWidth / 2;
+          h = glass.offsetHeight / 2;
+          /*execute a function when someone moves the magnifier glass over the image:*/
+          glass.addEventListener("mousemove", moveMagnifier);
+          img.addEventListener("mousemove", moveMagnifier);
+          /*and also for touch screens:*/
+          glass.addEventListener("touchmove", moveMagnifier);
+          img.addEventListener("touchmove", moveMagnifier);
+          function moveMagnifier(e) {
+            var pos, x, y;
+            /*prevent any other actions that may occur when moving over the image*/
+            e.preventDefault();
+            /*get the cursor's x and y positions:*/
+            pos = getCursorPos(e);
+            x = pos.x;
+            y = pos.y;
+            /*prevent the magnifier glass from being positioned outside the image:*/
+            if (x > img.width - (w / zoom)) {x = img.width - (w / zoom);}
+            if (x < w / zoom) {x = w / zoom;}
+            if (y > img.height - (h / zoom)) {y = img.height - (h / zoom);}
+            if (y < h / zoom) {y = h / zoom;}
+            /*set the position of the magnifier glass:*/
+            glass.style.left = (x - w) + "px";
+            glass.style.top = (y - h) + "px";
+            /*display what the magnifier glass "sees":*/
+            glass.style.backgroundPosition = "-" + ((x * zoom) - w + bw) + "px -" + ((y * zoom) - h + bw) + "px";
+          }
+          function getCursorPos(e) {
+            var a, x = 0, y = 0;
+            e = e || window.event;
+            /*get the x and y positions of the image:*/
+            a = img.getBoundingClientRect();
+            /*calculate the cursor's x and y coordinates, relative to the image:*/
+            x = e.pageX - a.left;
+            y = e.pageY - a.top;
+            /*consider any page scrolling:*/
+            x = x - window.pageXOffset;
+            y = y - window.pageYOffset;
+            return {x : x, y : y};
+          }
+
+          return glass;
+        }
+        </script>
     </head>
 
     <body>
@@ -123,7 +250,7 @@
         <audio id="warning" src="static/alarm/warning.mp3"></audio>
 
         <div class="after-content" id="container">
-          <img src="{{img}}" id="img" style="width: 60%; height; 100%; float: left;">
+          <img src="{{img}}" id="img" style="width: 60%; height; 70%; float: left;">
           <form method="post" style="float: left; margin-left: 10%;">
             <div>
               <p>
@@ -194,6 +321,17 @@
               </p>
             </div>
           </form>
+        </div>
+
+        <div style="float: left; margin-top: -100px; margin-left: 23%;">
+          <p>
+            <div id="toggle">
+              <button type="button" id="zoom" class='toggle-button'>Zoom</button>
+              <button type="button" id="live" class='toggle-button'>Live</button>
+            </div>
+            <button type="button" id="gamma" class='bottom-button'>Gamma</button>
+            <button type="button" id="contrast" class='bottom-button'>Contrast</button>
+          </p>
         </div>
       {% endif %}
 
@@ -267,6 +405,33 @@
               mode_request(mode_name);
             }
 
+            var imagesize = $('#img').width();
+            var x1 = 0, x2 = 0, y1 = 0, y2 = 0, height=0, width=0;
+
+            $("#img").imgAreaSelect({
+              handles: true,
+              onSelectEnd: function(img, selection) {
+                height = img.height;
+                width = img.width;
+                x1 = selection.x1;
+                x2 = selection.x2;
+                y1 = selection.y1;
+                y2 = selection.y2;
+              }
+            });
+
+            var $ias = $('#img').imgAreaSelect({
+                instance: true
+            });
+
+            var zoomed = false;
+
+            $("#live").removeClass("toggle-button");
+            $("#live").addClass("selected-toggle");
+
+            glass = magnify("img", 3);
+            glass.removeAttribute("class");
+
             /*
               LOGIC
             */
@@ -297,25 +462,6 @@
             $(".option-button").click(function() {
               var option_name = $(this).attr("id");
               mode_request(option_name, show_please_wait=true);
-            });
-
-            var imagesize = $('#img').width();
-            var x1 = 0, x2 = 0, y1 = 0, y2 = 0, height=0, width=0;
-
-            $("#img").imgAreaSelect({
-              handles: true,
-              onSelectEnd: function(img, selection) {
-                height = img.height;
-                width = img.width;
-                x1 = selection.x1;
-                x2 = selection.x2;
-                y1 = selection.y1;
-                y2 = selection.y2;
-              }
-            });
-
-            var $ias = $('#img').imgAreaSelect({
-                instance: true
             });
 
             $("#zeff-operation").click(function() {
@@ -485,6 +631,30 @@
                   }
                 })
               }
+            });
+
+            $("#zoom").click(function() {
+              glass = magnify("img", 3);
+
+              $("#live").removeClass("selected-toggle");
+              $("#live").addClass("toggle-button");
+
+              $("#zoom").removeClass("toggle-button");
+              $("#zoom").addClass("selected-toggle");
+
+              zoomed = true;
+            });
+
+            $("#live").click(function() {
+              glass.removeAttribute("class");
+
+              $("#live").removeClass("toggle-button");
+              $("#live").addClass("selected-toggle");
+
+              $("#zoom").removeClass("selected-toggle");
+              $("#zoom").addClass("toggle-button");
+
+              zoomed = false;
             });
         });
       </script>
